<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#006400"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#006400"
        tools:context="com.example.unicron.rivendell.MainActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/books"
            android:scaleType="centerCrop"
            android:src="@drawable/dice" />

        <TextView
            android:id="@+id/rivendell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:paddingTop="10dp"
            android:text="@string/rivendell"
            android:textAlignment="center"
            android:textColor="#DAA520"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/books"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rivendell"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            android:paddingBottom="10dp"
            android:text="@string/books_and_games"
            android:textColor="#DAA520"
            android:textSize="36sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:fontFamily="cursive"
            android:paddingLeft="20dp"
            android:text="@string/a_great_source_for_board_games_collectible_card_games_roleplaying_games_new_used_books_t_shirts_miniatures_collectibles_and_much_more"
            android:textColor="#DAA520"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sum"
            android:fontFamily="cursive"
            android:paddingLeft="20dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/hour_12_00_8_00pm"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hours"
            android:fontFamily="cursive"
            android:paddingLeft="20dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/phone_508_252_5798"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:fontFamily="cursive"
            android:paddingLeft="20dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/location_24_winthrop_street_rehoboth_ma_02769"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Location"
            android:fontFamily="cursive"
            android:paddingLeft="20dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/web_www_rivendellbooksandgames_com"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>
</ScrollView>